# MatlabFile

./: .cproject  .gitignore  .project  LICENSE.txt  Makefile  MatlabFile.cpp  MatlabFile.hpp  README.md  example_output.mat
example/: CMakeLists.txt  Makefile
src/: CMakeLists.txt
src/example/: MatlabFileTest.m  matlab_file_test.cpp
src/libMatlabFile/: MatlabFile.cpp  MatlabFile.h  MatlabFile.hpp
